Fix types in apps.json

--- a/app.json.jinja
+++ b/app.json.jinja
@@ -21,8 +21,8 @@
         "description": "Checking if web server is up",
         "path": "/health",
         "attempts": 3,
-        "interval": "10s",
-        "timeout": "5s"
+        "interval": 10,
+        "timeout": 5
       }
     ]
   },
