--- a/tests/{% if framework == "flask" %}test_app.py{% endif %}.jinja
+++ b/tests/{% if framework == "flask" %}test_app.py{% endif %}.jinja
@@ -37,7 +37,7 @@ def test_health_check(client):
     datetime.fromisoformat(data['timestamp'])
     
     # Basic type checks
-    assert isinstance(data['uptime_seconds'], (int, float))
+    assert isinstance(data['uptime_seconds'], int | float)
     assert isinstance(data['status'], str)
     assert isinstance(data['version'], str)
     assert isinstance(data['database'], str)
